--- a/index.html
+++ b/index.html
@@ -42,7 +42,16 @@
         <img src="img/blackwhite.png">
         <h2>Black White --- 99.00</h2>
         <p>A minimalist coffee duo uniting the boldness of black coffee with the smoothness of milk, offering a stark yet harmonious contrast of flavors in one cup.</p>
-       
+        <img src="img/cr.png">
+        <h2>Cinnamon Roll --- 50.00</h2>
+        <p>Swirled sweet pastry with cinnamon and icing.</p>
+        <img src="img/bs.png">
+        <h2>Blueberry Scone --- 69.00</h2>
+        <p>Blueberry Scone shortest description</p>
+        <img src="img/cd.png">
+        <h2>Cheese Danish --- 45.00</h2>
+        <p>A cheese Danish is a buttery pastry with cream cheese filling, enjoyed for breakfast or dessert.</p>
+
     
     </section>
 
