--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section id="menu" class="menu">
         <h2>Our Menu</h2>
-        <!-- Add menu items here -->
+        <!-- Add menu items here 11-->
         <img src="img/coffee_cocoa.png">
         <h2>Coffee Cocoa --- 79.00</h2>
         <p>The perfect harmony of coffee's robustness and cocoa's bittersweet depth, creating a satisfying fusion of flavors in every sip.</p>
