--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
         <p>A minimalist coffee duo uniting the boldness of black coffee with the smoothness of milk, offering a stark yet harmonious contrast of flavors in one cup.</p>
         <img src="img/cr.png">
         <h2>Cinnamon Roll --- 50.00</h2>
-        <p>Swirled sweet pastry with cinnamon and icing.</p>
+        <p>Indulge in our fresh cinnamon rolls at the coffee shop. </p>
+        <P>Soft, aromatic swirls generously topped with sweet icing. A perfect match for your coffee cravings</P>
         <img src="img/bs.png">
-        <h2>Blueberry Scone --- 69.00</h2>
-        <p>Blueberry Scone shortest description</p>
+        <h2>Blueberry Scone --- 60.00</h2>
+        <p>Indulge in the perfect pairing of freshly brewed coffee and our delectable blueberry scones.</p>
+        <p>Experience the delightful blend of sweet, tangy blueberries and buttery, crumbly goodness in every bite. </p>
+        <p>Elevate your coffee break with this irresistible treat at our cozy café.</p>
         <img src="img/cd.png">
-        <h2>Cheese Danish --- 45.00</h2>
-        <p>A cheese Danish is a buttery pastry with cream cheese filling, enjoyed for breakfast or dessert.</p>
+        <h2>Cheese Danish --- 50.00</h2>
+        <p>Savor our heavenly cheese danish at the coffee shop, a flaky pastry embracing creamy cheese filling.</p>
+        <p>The ultimate companion to your coffee, it's a bite of pure indulgence. </p>
 
     
     </section>
@@ -81,9 +85,9 @@
         </div>
         <div>
             <h2>Cafe Mission</h2>
-            <h2>At Serenity Brews, we blend exceptional coffee, heartfelt hospitality, and a serene atmosphere to craft more than a café – an escape. 
+            <p>At Serenity Brews, we blend exceptional coffee, heartfelt hospitality, and a serene atmosphere to craft more than a café – an escape. 
                 Our mission is to create a space where every sip is a moment of calm, every interaction is a connection, and every visit tells a story. 
-                With ethically sourced beans, expertly prepared beverages, and a cozy ambiance, we invite you to find solace in the simple pleasures, ignite your creativity, and make Serenity Brews your own tranquil haven.</h2>
+                With ethically sourced beans, expertly prepared beverages, and a cozy ambiance, we invite you to find solace in the simple pleasures, ignite your creativity, and make Serenity Brews your own tranquil haven.</p>
         </div>
         
     </section>
