--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         </div>
         <h1>Welcome to LAVA JAVA Café</h1>
         <p>Sip, Relax, Repeat</p>
+        <head>
+            <link rel="stylesheet" type="text/css" href="styles.css">
+          </head>
+          <body>
+            <div class="image-container"></div>
+          </body>
         <a href="#menu" class="cta-button">Explore Menu</a>
+
     </section>
 
     <section id="menu" class="menu">
@@ -57,13 +64,10 @@
 
     <section id="about" class="about">
         <h2>About Us</h2>
-        <p>Discover the story behind LAVA JAVA Café.</p>
-        <p>LAVA JAVA Café are known as JAVA café. We start to build at june 11, 2018.
-            We started in the small business creating from a simple coffee like mocha and chocolate,
-            at 2019 milk become popular because we add twist (ice coffe flavor: milk with strawbery to it's topings) 
-            summer season at that time.
-            The year 2020 pandemic we create a social media flatform for delivery and taking order online,
-             we starting to add new style, flavoring upgrading for coffees. 
+        <p>LAVA JAVA Café.</p>
+        <p>Nestled in a quaint town, Lava Java Cafe was a haven of connection. Maya, its founder, brewed dreams alongside rich coffee. 
+            The "Lava Latte," a masterpiece, mirrored the café's charm. Patrons became a tight-knit community, sharing stories over lavender pastries or pumpkin spice treats. 
+            Beyond food, open mic nights and art workshops united the town. Lava Java Cafe wasn't just a place to sip coffee; it was a place to savor life's moments and kindle friendships, reminding everyone of the magic in a cup of coffee and a warm smile.
         </p>
         <div style=" margin-left:40%;   display: flex;">
           
@@ -90,8 +94,13 @@
 
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
-        <p>email: 202080177@psu.palawan.edu.ph | 202080150@psu.palawan.edu.ph</p>
+        <p>Phone number: +639234866445</p>
+        <p>Email: galiciacabilar@gmail.com</p>
+        <p>Address: Purok San Francisco 2, Brgy. Tiniguiban, Puerto Princesa City</p>
+        <img src="img/mapp.png">
         <p>Have questions or feedback? Reach out to us...</p>
+        <a href="bit.ly/3qMCtJi">Lava Java Cafe Visitor Interaction Form</a>
+
     </section>
 
     <footer>
